Fix text align footer sm view

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ a {
     color: rgb(141, 173, 50);
 }
 
+a.brand{
+    background-color: #154551;
+}
+
 @media only screen and (max-width: 426px) {
     body {
         width: 100vw;
@@ -17,8 +21,8 @@ a {
         display: flex;
         flex-direction: column;
         align-items: center;
-        /* background-image: url(/image/xxl-0361.jpg); */
-        background-color: rgb(0, 0, 0);
+        background-image: url(/image/HairyQueasyAcouchi-max-1mb.gif);
+        /* background-color: rgb(0, 0, 0); */
     }
 
     .neonText,
@@ -57,14 +61,13 @@ a {
         width: 99%;
         display: flex;
         justify-content: center;
-        background-color: rgb(0, 0, 0);
+        background-image: url(/image/HairyQueasyAcouchi-max-1mb.gif);
     }
 
     .brand {
         margin-top: 10%;
         margin-right: 7%;
         text-align: center;
-
     }
 
 
@@ -108,7 +111,7 @@ a {
         width: 90%;
         height: 500px;
         margin-left: 4%;
-        margin-bottom: 4%;
+        margin-bottom: 7%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -156,6 +159,7 @@ a {
 
     footer {
         margin-right: 4%;
+        text-align: center;
     }
 }
 
@@ -165,8 +169,8 @@ a {
         width: 100vw;
         height: 100vh;
         background-color: rgb(0, 0, 0);
-        /* background-image: url(/image/xxl-0361.jpg); */
-        background-size: cover;
+        background-image: url(/image/HairyQueasyAcouchi-max-1mb.gif);
+        background-size: auto;
     }
 
     .neonText,
@@ -215,7 +219,7 @@ a {
         width: 100%;
         display: flex;
         justify-content: center;
-        background-color: rgb(0, 0, 0);
+        background-image: url(/image/HairyQueasyAcouchi-max-1mb.gif);
     }
 
     .brand {
@@ -310,7 +314,7 @@ a {
         width: 100vw;
         height: 100vh;
         /* background-image: url(/image/xxl-0361.jpg); */
-        background-color: rgb(0, 0, 0);
+        background-image: url(/image/HairyQueasyAcouchi-max-1mb.gif);
     }
 
     .neonText,
@@ -359,6 +363,9 @@ a {
         border-radius: 10px;
         box-shadow: 9px 9px rgba(0, 0, 0, 0.698);
     }
+    header{
+        background-image: url(/image/HairyQueasyAcouchi-max-1mb.gif);
+    }
 
     .brand {
         display: flex;
@@ -371,8 +378,7 @@ a {
         justify-content: center;
         width: 100%;
         height: 30%;
-        margin-top: 2%;
-        margin-bottom: 2%;
+        margin-top: 1%;
     }
 
 
